changed video hosting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="parallax-container">
     <div class="parallax">
     <video  autoplay loop volume="0" poster="img/waves.png">
-      <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
+      <source src="https://player.vimeo.com/external/206480099.hd.mp4?s=bddd06aea65e4277614b7ad420af11a62748f410&profile_id=119" type="video/mp4">
       <img src="img/waves.png" alt="">
     </video>
     </div>
