--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 {% include nav.html %}
 <div class="parallax-container">
-    <div class="parallax">
-    <video  autoplay loop volume="0" poster="img/waves.png">
+    <div class="parallax parallax-top">
+    <video playsinline autoplay loop volume="0" poster="img/waves.png">
       <source src="https://player.vimeo.com/external/206480099.hd.mp4?s=bddd06aea65e4277614b7ad420af11a62748f410&profile_id=119" type="video/mp4">
       <img src="img/waves.png" alt="">
     </video>
