--- a/video.html
+++ b/video.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container">
-  <video width="100%" height:"auto" playsinline autoplay loop  muted poster="img/waves.png">
+  <video width="100%" height:"auto" webkit-playsinline autoplay loop  muted poster="img/waves.png">
     <source src="https://player.vimeo.com/external/206480099.hd.mp4?s=bddd06aea65e4277614b7ad420af11a62748f410&profile_id=119" type="video/mp4">
     <img src="img/waves.png" alt="">
   </video>
