--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ layout: default
       <div class="parallax">
       </div>
       <div class="container">
-        <p class="center white-text valign flow-text"><b>WEKREATIVE</b> is a full-service marketing firm providing creative solutions for businesses and organization around the globe.  Nothing is more exciting to our team than coming alongside a group of people to  help identify what makes them unique, and then helping them share that story through multiple mediums.  Regardless of the stage of the organization — proper identification, development and execution of their message is the key to success and longevity.  <b>WEKREATIVE</b> specializes in pushing the status quo and creating awe-inspired results.</p>
+        <p class="center white-text valign flow-text"><b>WEKREATIVE</b> is a full-service marketing firm providing creative solutions for businesses and organizations around the globe.  Nothing is more exciting to our team than coming alongside a group of people to  help identify what makes them unique, and then helping them share that story through multiple mediums.  Regardless of the stage of the organization — proper identification, development and execution of their message is the key to success and longevity.  <b>WEKREATIVE</b> specializes in pushing the status quo and creating awe-inspired results.</p>
         </div>
       </div>
   </div>
