--- a/index.html
+++ b/index.html
@@ -45,30 +45,54 @@ layout: default
       <h1 class="header center uppercase white-text">Get Kreative</h1>
       <p  class="center white-text">At WEKREATIVE, our goal is to provide creative direction, strategic thinking and <br> experienced execution to launch, grow or revitalize your business or organization.</p>
   </div>
-  <div class="row">
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_1a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_1b.png'" onmouseout="this.src='img/WK_Web_Icons_1a.png'">
+  <div class="row icon-row">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_1a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_1b.png" alt="Avatar" class="image">
+      </div>
     </div>
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_2a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_2b.png'" onmouseout="this.src='img/WK_Web_Icons_2a.png'">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_2a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_2b.png" alt="Avatar" class="image">
+      </div>
     </div>
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_3a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_3b.png'" onmouseout="this.src='img/WK_Web_Icons_3a.png'">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_3a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_3b.png" alt="Avatar" class="image">
+      </div>
     </div>
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_4a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_4b.png'" onmouseout="this.src='img/WK_Web_Icons_4a.png'">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_4a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_4b.png" alt="Avatar" class="image">
+      </div>
     </div>
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_5a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_5b.png'" onmouseout="this.src='img/WK_Web_Icons_5a.png'">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_5a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_5b.png" alt="Avatar" class="image">
+      </div>
     </div>
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_6a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_6b.png'" onmouseout="this.src='img/WK_Web_Icons_6a.png'">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_6a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_6b.png" alt="Avatar" class="image">
+      </div>
     </div>
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_7a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_7b.png'" onmouseout="this.src='img/WK_Web_Icons_7a.png'">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_7a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_7b.png" alt="Avatar" class="image">
+      </div>
     </div>
-    <div class="col  s6 m3">
-      <img src="img/WK_Web_Icons_8a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_8b.png'" onmouseout="this.src='img/WK_Web_Icons_8a.png'">
+    <div class="col s6 m3 slide-icon">
+      <img src="img/WK_Web_Icons_8a.png" alt="Avatar" class="image">
+      <div class="overlay">
+        <img src="img/WK_Web_Icons_8b.png" alt="Avatar" class="image">
+      </div>
     </div>
   </div>
   </div>
