slider and ui updates

--- a/index.html
+++ b/index.html
@@ -3,154 +3,8 @@ layout: default
 ---
 
 {% include nav.html %}
-<div class="parallax-container">
-    <div class="parallax parallax-top">
-    <video webkit-playsinline autoplay loop muted poster="img/waves.png">
-      <source src="https://player.vimeo.com/external/206480099.hd.mp4?s=bddd06aea65e4277614b7ad420af11a62748f410&profile_id=119" type="video/mp4">
-      <img src="img/waves.png" alt="">
-    </video>
-    </div>
-    <div  id="home" class="row section scrollspy">
-    <div class="container">
-      <br>
-      <div class="col s12 l8 offset-l2">
-      <div class="row valign-wrapper">
-        <div class="col s3 center">
-          <h5 class="white-text center-align valign uppercase"><a href="#">Home</a></h5>
-        </div>
-        <div class="col s3 center">
-          <h5 class="white-text center-align valign uppercase"><a href="#work">Work</a></h5>
-        </div>
-        <div class="col s4">
-          <img class="center-align valign" src="{{ "/img/wekreative_transGOLD.png" | prepend: site.url }}" alt="" width="100%">
-        </div>
-        <div class="col s3 center">
-          <h5 class="white-text center-align valign uppercase"><a href="#about">About</a></h5>
-        </div>
-        <div class="col s3 center">
-          <h5 class="white-text  valign uppercase"><a href="#contact">Contact</a></h5>
-        </div>
-      </div>
-      </div>
-      <div class="col s12 l8 offset-l2">
-        <h1 id="header-name" class="center white-text uppercase">Wekreative Design Group</h1>
-        <h3 id="header-text" class="center white-text" style="letter-spacing: 2px; font-size: 1.5rem"><i>your team of marketing experts</i></h3>
-      </div>
-     </div>
-    </div>
-</div>
-<div class="section white get-kreative">
-<div id="work" class="section scrollspy get-kreative">
-  <div class="black" style="background-color: #161616;">
-      <h1 class="header center uppercase white-text">Get Kreative</h1>
-      <p  class="center white-text">At WEKREATIVE, our goal is to provide creative direction, strategic thinking and <br> experienced execution to launch, grow or revitalize your business or organization.</p>
-  </div>
-  <div class="row icon-row">
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_1a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_1b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_2a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_2b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_3a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_3b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_4a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_4b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_5a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_5b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_6a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_6b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_7a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_7b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-    <div class="col s6 m3 slide-icon">
-      <img src="img/WK_Web_Icons_8a.png" alt="Avatar" class="image">
-      <div class="overlay">
-        <img src="img/WK_Web_Icons_8b.png" alt="Avatar" class="image">
-      </div>
-    </div>
-  </div>
-  </div>
-</div>
-<div id="grey" class="section">
-  <div id="grey-row" class="row">
-    <div class="col s6 m3">
-          <div class="card">
-            <div class="card-image">
-              <img src="img/WK_ContractIcons_1.png">
-            </div>
-            <div class="card-content">
-              <h4 class="center uppercase bold">Month-to-Month</h4>
-              <p>Our work produces immediate results and is produced to afford ultimate flexibility.</p>
-            </div>
-          </div>
-    </div>
-    <div class="col s6 m3">
-          <div class="card">
-            <div class="card-image">
-              <img src="img/WK_ContractIcons_3.png">
-            </div>
-            <div class="card-content">
-              <h4 class="center uppercase bold">No long-term contracts</h4>
-              <p>We believe in relationships, not long-term contracts.  Our work speaks for itself.</p>
-            </div>
-          </div>
-    </div>
-    <div class="col s6 m3">
-          <div class="card">
-            <div class="card-image">
-              <img src="img/WK_ContractIcons_2.png">
-            </div>
-            <div class="card-content">
-              <h4 class="center uppercase bold">A-la-carte</h4>
-              <p>We understand not all organizations require the same services.  Our model is built on offering as much or little as you need.</p>
-            </div>
-          </div>
-    </div>
-    <div class="col s6 m3">
-          <div class="card">
-            <div class="card-image">
-              <img src="img/WK_ContractIcons_4.png">
-            </div>
-            <div class="card-content">
-              <h4 class="center uppercase bold">Cheaper than adding staff</h4>
-              <p>Hiring an experienced designer is expensive and only having one is restrictive.  We offer a team of experts that work together, growing your brand and silencing the competition.</p>
-            </div>
-          </div>
-    </div>
-  </div>
-</div>
-<div id="about" class="parallax-container valign-wrapper section scrollspy" style="background-color: #161616; height: auto;">
-  <div class="parallax">
-  </div>
-  <div class="container">
-    <p class="center white-text valign flow-text"><b>WEKREATIVE</b> is a full-service marketing firm providing creative solutions for businesses and organizations around the globe.  Nothing is more exciting to our team than coming alongside a group of people to  help identify what makes them unique, and then helping them share that story through multiple mediums.  Regardless of the stage of the organization — proper identification, development and execution of their message is the key to success and longevity.  <b>WEKREATIVE</b> specializes in pushing the status quo and creating awe-inspired results.</p>
-  </div>
-</div>
-</div>
+{% include header.html %}
+{% include services.html %}
+{% include slider.html %}
+{% include about.html %}
 {% include contact.html %}
